--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <!-- BOTON -->
                     <div class="btn-rating-container">
-                        <button class="jugar-btn" id="myBtn"><span><a href="/descargas.html" target="_blank">Jugar Ahora</a></span></button>
+                        <button class="jugar-btn" id="myBtn"><span><a href="#descargas" target="_blank">Jugar Ahora</a></span></button>
                     </div>
                 </div>
                 <!-- CONTENIDO DERECHA -->
@@ -148,10 +148,10 @@
                 <button class="button" data-tooltip="Op Libertad">
                     <div class="button-wrapper">
                         <div class="text">
-                            <a href="https://operacionlibertad2023.github.io/operacionlibertad2023/descargas" target="_blank">Descargar</a>
+                            <a href="/descargas.html" target="_blank">Descargar</a>
                         </div>
                         <span class="icon">
-                            <a href="https://operacionlibertad2023.github.io/operacionlibertad2023/descargas" target="_blank">
+                            <a href="/descargas.html" target="_blank">
                                 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15V3m0 12l-4-4m4 4l4-4M2 17l.621 2.485A2 2 0 0 0 4.561 21h14.878a2 2 0 0 0 1.94-1.515L22 17"></path></svg>
                             </a>
                         </span>
